flex_boxes.css
p {
  text-align: center;
  align-items: center;
}

body {
  padding: 0;
  margin: 0;
}

h5 {
  background-color: white;
  height: 30px;
  width: 90px;
  position: absolute;
  right: 10px;
  margin-left: 10px;
  margin-top: 30px;
  border: 1px solid black;
}

.header {
  grid-area: header;
  height: 100px;
}

.wrapper {
  display: grid;
  grid-template-areas:
    "header header header header "
    "two  three three three"
    "two four four five"
    "two four four five"
    "two six six five"
    "footer footer footer footer";
}

.header {
  text-align: right;
  background-color: powderblue;
  display: grid;
  border: 1px solid black;
}

footer {
  background-color: powderblue;
  border: 1px solid black;
  grid-area: footer;
  height: 100px;
}

article {
  grid-area: two;
  text-align: center;
  background-color: #faebd7;
  text-align: center;
  border: 1px solid black;
}

.two {
  grid-area: two;
  text-align: center;
  background-color: #faebd7;
  text-align: center;
  border: 1px solid black;
}

.three {
  grid-area: three;
  height: 50px;
  text-align: center;
  background-color: #90ee90;
  border: 1px solid black;
}

.four {
  grid-area: four;
  height: 400px;
  text-align: center;
  border: 1px solid black;
}

.five {
  grid-area: five;
  text-align: center;
  background-color: #faebd7;
  position: static;
  border: 1px solid black;
}

.six {
  grid-area: six;
  height: 50px;
  text-align: center;
  background-color: #90ee90;
  border: 1px solid black;
  align-items: center;
}

.flex_container {
  border: solid black;
  list-style-type: none;
  margin: 10px;
  padding: 0;
  display: flex;
  flex-flow: column wrap;
  justify-content: space-evenly;
  align-items: center;
}

a {
  border: 1px solid black;
  margin: 5px;
  background-color: powderblue;
  padding: 2px;
  display: grid;
}

.same {
  border: 1px solid black;
  margin: 5px;
  background-color: powderblue;
  padding: 2px;
}

section {
  grid-area: six;
  height: 50px;
  text-align: center;
  background-color: #90ee90;
  border: 1px solid black;
  align-items: center;
}

aside {
  grid-area: five;
  text-align: center;
  background-color: #faebd7;
  position: static;
  border: 1px solid black;
}

